fixed broken css

--- a/css/main.css
+++ b/css/main.css
@@ -238,7 +238,6 @@ display: inline-block}
     float: none;
     text-align: center;
     margin-top: 2em;
-    width:500px;
     margin-bottom: 10em;
     margin-right: auto;
     margin-left: auto;
